tests/invalid/circ_mode.m
% Test for circular equivalence modes.
:- module circ_mode.

:- interface.

:- mode circ == circ.

:- mode circ1 == circ2.

:- mode circ2 == circ1.

